Cronjobs for clearing currentHits and Fixing Bugs .
