# routes/order.js
@@ -5,6 +5,6 @@ const {
 const { isSignedIn } = require('../middleware/auth');
 const router = express.Router();
 
-router.post('/:userId/:apiId/',isSignedIn, createOrder);
+router.post('/:apiId',isSignedIn, createOrder);
 
 module.exports = router;
